// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form <PasswordInput> should render <PasswordInput> 1`] = `
<div>
  <form>
    <div
      class="Aquarium-Input"
      style="display: flex; flex-direction: column;"
    >
      <label
        class="w-full"
        for="test-id"
        id="test-id-label"
      >
        <span
          class="block mb-2"
        >
          <span
            class="inline-flex items-center typography-small-strong text-default"
          >
            PasswordInput
          </span>
        </span>
      </label>
      <span
        class="Aquarium-InputBase relative block"
      >
        <input
          aria-required="false"
          class="block w-full rounded-sm disabled:cursor-not-allowed disabled:border-default disabled:bg-default typography-small text-default disabled:text-inactive placeholder:text-inactive focus:outline-none px-3 py-3 bg-transparent border border-default hover:border-intense focus:border-info-default"
          id="test-id"
          name="password"
          type="password"
        />
      </span>
      <p
        class="block mt-1 mb-3 typography-caption"
      >
         
      </p>
    </div>
    <button
      class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 hover:text-primary-hover Aquarium-Button whitespace-nowrap transition text-center rounded-sm relative px-4 py-3 inline-flex gap-3 items-center justify-center active:text-white active:bg-primary-active hover:bg-primary-intense disabled:text-white disabled:bg-primary-muted Aquarium-Button.Primary text-white bg-primary-default icon-stroke-2 typography-default-strong"
      type="submit"
    >
      <div
        class="flex items-center justify-center gap-3"
      >
        Submit
      </div>
    </button>
  </form>
</div>
`;

exports[`Form <TextInput> should render <TextInput> 1`] = `
<div>
  <form>
    <div
      class="Aquarium-Input"
      style="display: flex; flex-direction: column;"
    >
      <label
        class="w-full"
        for="test-id"
        id="test-id-label"
      >
        <span
          class="block mb-2"
        >
          <span
            class="inline-flex items-center typography-small-strong text-default"
          >
            TextInput
          </span>
        </span>
      </label>
      <span
        class="Aquarium-InputBase relative block"
      >
        <input
          aria-required="false"
          class="block w-full rounded-sm disabled:cursor-not-allowed disabled:border-default disabled:bg-default typography-small text-default disabled:text-inactive placeholder:text-inactive focus:outline-none px-3 py-3 bg-transparent border border-default hover:border-intense focus:border-info-default"
          id="test-id"
          name="formFieldsCustomName"
          type="text"
        />
      </span>
      <p
        class="block mt-1 mb-3 typography-caption"
      >
         
      </p>
    </div>
    <button
      class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 hover:text-primary-hover Aquarium-Button whitespace-nowrap transition text-center rounded-sm relative px-4 py-3 inline-flex gap-3 items-center justify-center active:text-white active:bg-primary-active hover:bg-primary-intense disabled:text-white disabled:bg-primary-muted Aquarium-Button.Primary text-white bg-primary-default icon-stroke-2 typography-default-strong"
      type="submit"
    >
      <div
        class="flex items-center justify-center gap-3"
      >
        Submit
      </div>
    </button>
  </form>
</div>
`;
